--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -75,6 +75,27 @@ img,video {max-width: 100%;height: auto;}
 .list-unstyled {padding: 0; margin: 0; list-style-type: none;}
 /* Normalize appearence */
 address,blockquote cite {font-style:normal}
+button, .button,
+input:not([type=checkbox]):not([type=radio]),
+input[type=range],
+select,
+textarea {
+	-webkit-appearance:none
+}
+textarea {
+	display:block;
+	margin-right:0;
+	box-sizing:border-box;
+	resize:vertical;
+	white-space: normal;
+}
+textarea:not([cols]) {
+	width:100%
+}
+textarea:not([rows]) {
+	min-height:40px;
+	height:140px
+}
 
 
 /* Cursor over interactive elements */
