--- a/catalog/view/theme/helium/template/extension/module/bestseller.twig
+++ b/catalog/view/theme/helium/template/extension/module/bestseller.twig
@@ -1,7 +1,7 @@
 {% if products %}
   <div class="module bestseller-products">
     <span class="h3">{{ heading_title }}</span>
-    <div class="scroll-x">
+    <div class="scroll-x js_scroll">
     {% for product in products %}
       {% include 'helium/template/product/product_miniature.twig' with {product: product} %}
     {% endfor %}   
