UPD: Hide unneccessary buttons on mobile

--- a/catalog/view/theme/helium/template/common/header.twig
+++ b/catalog/view/theme/helium/template/common/header.twig
@@ -115,7 +115,7 @@
     <div class="search">
       {{ search }}
     </div>
-    <div id="header-cart" class="cart">
+    <div id="header-cart" class="cart hidden-md">
       {{ cart }}
     </div>
   </nav>
