--- a/catalog/view/theme/helium/template/common/menu.twig
+++ b/catalog/view/theme/helium/template/common/menu.twig
@@ -1,5 +1,5 @@
 {% if categories %}
-  <div class="relative">
+  <div class="relative hidden-md">
     <button 
       type="button"
       id="main-menu-trigger"
