--- a/catalog/view/theme/helium/template/extension/module/slideshow.twig
+++ b/catalog/view/theme/helium/template/extension/module/slideshow.twig
@@ -1,12 +1,13 @@
-<div class="slideshow swiper-viewport">
-  <div id="slideshow{{ module }}" class="swiper-container">
-    <div class="swiper-wrapper"> {% for banner in banners %}
-      <div class="swiper-slide text-center">{% if banner.link %}<a href="{{ banner.link }}"><img loading="lazy" src="{{ banner.image }}" alt="{{ banner.title }}" class="img-responsive" /></a>{% else %}<img loading="lazy" src="{{ banner.image }}" alt="{{ banner.title }}" class="img-responsive" />{% endif %}</div>
-      {% endfor %} </div>
-  </div>
-  <div class="swiper-pagination slideshow{{ module }}"></div>
-  <div class="swiper-pager">
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+<div class="slideshow module">
+  <div id="slideshow{{ module }}" class="scroll-x js_scroll" data-time="{{ time }}">
+      {% for banner in banners %}
+        <div class="slide">
+          {% if banner.link %}
+            <a title="{{ banner.title }}" href="{{ banner.link }}"><img loading="lazy" src="{{ banner.image }}" alt="{{ banner.title }}" /></a>
+          {% else %}
+            <img loading="lazy" src="{{ banner.image }}" alt="{{ banner.title }}" />
+          {% endif %}
+        </div>
+      {% endfor %} 
   </div>
 </div>
